<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CommitAffairActivity">


    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/day_ic_title"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/day_tv_affair_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:id="@+id/day_commit_et_name"
            android:hint="@string/day_et_affair_name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <View
        android:background="#ECECEC"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/day_ic_time"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <TextView
                android:layout_gravity="center"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/day_tv_target_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/day_tv_target_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/day_commit_choose_startDay"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/day_commit_tv_startDay"
                android:layout_gravity="center|start"
                android:textColor="#6C81F9"
                android:textSize="16sp"
                tools:text="2019-03-26 星期三"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_gravity="end|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/day_tv_chinese_day"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Switch
                    android:id="@+id/day_commit_sw_isChineseDay"
                    android:textOn="@string/day_sw_chinese"
                    android:textOff="@string/day_sw_new"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/day_ic_classify"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:layout_gravity="center"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/day_tv_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/day_commit_tv_classify"
                android:textSize="16sp"
                android:layout_gravity="end"
                tools:text="生活"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#6C81F9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_gravity="end|center"
                android:src="@drawable/day_ic_down"
                android:layout_width="10dp"
                android:layout_height="10dp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/day_ic_alert"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:layout_gravity="center"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/day_tv_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/day_commit_sw_notify"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:background="#ECECEC"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/day_ic_top"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:layout_gravity="center"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/day_tv_end_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/day_commit_sw_isEnd"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/day_commit_choose_endDay"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/day_ic_date"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:id="@+id/day_commit_tv_endDay"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#6C81F9"
            android:textSize="16sp"
            tools:text="2019-03-26 星期三"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:padding="10dp"
        android:background="#ECECEC"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/day_commit_btn_delete"
                android:visibility="gone"
                android:background="#EA3145"
                android:text="@string/day_btn_save"
                android:textColor="#FFFFFF"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/day_commit_btn_save"
                android:background="#6C81F9"
                android:text="@string/day_btn_save"
                android:textColor="#FFFFFF"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>